[package]
name = "cpclib-basmdoc"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true

[features]
default = ["rayon", "minify"]
rayon = ["dep:rayon"]
minify = ["dep:minify-html"]

[dependencies]
cpclib-asm.workspace = true
cpclib-tokens.workspace = true
cpclib-common.workspace = true
fs-err.workspace = true

delegate.workspace = true
glob.workspace = true
minijinja = { workspace = true, features = ["loader"] }
regex = "1.11"
rayon = { workspace = true, optional = true }
minify-html = { version = "0.18", optional = true }
rust-embed = {workspace = true, features = ["include-exclude", "compression"]}
serde.workspace = true
lazy_static = "1.5"
dashmap = "6.1"
indicatif = "0.17"

serde_json = "1.0"

dirs = "5.0"
ureq = "2.10"
flate2 = "1.0"


pandoc = {version="0.8"}
pulldown-cmark = "0.12"

[dev-dependencies]
tempfile = "3.6"

[build-dependencies]
cpclib-asm.workspace = true
fs-err.workspace = true

[lints]
workspace = true


[[bin]]
name = "basmdoc"
path = "src/bin/basmdoc.rs"