[package]
name = "cpclib-bdasm"
version = "0.8.2"
description = "Z80 disassembler. Still contains some bugs."

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[package.metadata.workspaces]
independent = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpclib-common.workspace = true
cpclib-asm.workspace = true
cpclib-disc.workspace = true
clap.workspace = true
const_format.workspace = true
time = "0.3.36"
camino.workspace = true

[features]
hfe = ["cpclib-disc/hfe", "cpclib-asm/hfe"]

[build-dependencies]
built = { version = "0.7.4", features = ["chrono"] }

[[bin]]
name = "bdasm"
path = "src/main.rs"

