[package]
name = "cpclib-bdasm"
version = "0.9.0"
description = "Z80 disassembler. Still contains some bugs."

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[package.metadata.workspaces]
independent = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpclib-common.workspace = true
cpclib-asm.workspace = true
cpclib-disc.workspace = true
const_format.workspace = true
time = "0.3.41"

[features]
hfe = ["cpclib-disc/hfe", "cpclib-asm/hfe"]

[build-dependencies]
built = { version = "0.7.7", features = ["chrono"] }

[[bin]]
name = "bdasm"
path = "src/main.rs"

