[package]
name = "cpclib-bdasm"
version.workspace = true
description = "Z80 disassembler. Still contains some bugs."

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[package.metadata.workspaces]
independent = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpclib-common = {workspace = true, features=["cmdline"]}
cpclib-asm.workspace = true
cpclib-disc.workspace = true
cpclib-sna.workspace = true
clap = {workspace = true, features = ["derive"]}
fs-err.workspace = true
const_format.workspace = true
thiserror.workspace = true
time.workspace = true

[features]
hfe = ["cpclib-disc/hfe", "cpclib-asm/hfe"]

[build-dependencies]
built.workspace = true

[dev-dependencies]
escargot = "0.5"
predicates = "3.1"
fs-err.workspace = true
tempfile = "3.13"

[target.'cfg(unix)'.dev-dependencies]
rexpect = "0.5"

[[bin]]
name = "bdasm"
path = "src/main.rs"

