[package]
name = "cpclib-bndbuild"
version.workspace = true
resolver = "2"
description = "Amstrad CPC project builder. Biased towards basm, but can still work with any tool"


authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

exclude = ["examples", "tests/dummy", "*.gif"]

[dependencies]

cpclib-bdasm.workspace = true
cpclib-runner.workspace = true
cpclib-common = { workspace = true, features = ["cmdline"] }
cpclib-basm = { workspace = true, default-features = false, features = [
    "xferlib",
] }
cpclib-basmdoc = { workspace = true}
cpclib-asm.workspace = true
cpclib-crunch.workspace = true
cpclib-sna = { workspace = true, features = ["cmdline"] }
cpclib-disc = { workspace = true, features = ["cmdline"] }
cpclib-imgconverter = { workspace = true, features = ["xferlib"] }
cpclib-xfertool.workspace = true

anyhow = "1.0.100"
camino = { workspace = true, features = ["serde1"] }
camino-tempfile.workspace = true
clap = { workspace = true, features = ["derive"] }
delegate.workspace = true
dot-writer = "0.1.4"
fancy-duration = "0.9.2"
globmatch = "0.3"
hostname = "0.4.2"
lazy-regex = "3.4.2"
minijinja = { workspace = true, features = ["loader"] }
paste.workspace = true
self_cell = "1.2.1"
self_update = {workspace = true, optional = true}
serde_yaml = "0.9.34"
serde.workspace = true
shlex.workspace = true
thiserror = "1.0"
topologic = "1.1.0"
clap_complete = "4.5.61"
utf8-chars = "3.0.6"
fancy-regex = "0.14.0"

[build-dependencies]
built.workspace = true
build-deps = "0.1.4"


[dev-dependencies]
test-generator = "0.3.1"
serial_test = "3.2.0"
camino-tempfile = { workspace = true }
assert_cmd = "2.1.1"

[[bin]]
name = "bndbuild"
path = "src/main.rs"

[features]

default = ["sna-interactive","colored_errors", "self-update", "fap", "rayon"]
colored_errors = ["cpclib-basm/colored_errors"]
fap = ["cpclib-runner/fap"]
hfe = ["cpclib-asm/hfe", "cpclib-disc/hfe", "cpclib-basm/hfe", "cpclib-bdasm/hfe"]
indicatif = ["cpclib-basm/indicatif"]
rayon = ["cpclib-basm/rayon", "cpclib-common/rayon", "cpclib-asm/rayon"]
sna-interactive = ["cpclib-sna/interactive"]
self-update =["self_update"]

[profile.release]
debug = 1
