[package]
name = "cpclib-bndbuild"
version.workspace = true
resolver = "2"
description = "Amstrad CPC project builder. Biased towards basm, but can still work with any tool"


authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

exclude = ["examples", "tests/dummy", "*.gif"]

[dependencies]

cpclib-bdasm.workspace = true
cpclib-runner.workspace = true
cpclib-catalog.workspace = true
cpclib-locomotive.workspace = true
cpclib-common = { workspace = true, features = ["cmdline"] }
cpclib-basm = { workspace = true, default-features = false, features = [
    "xferlib",
] }
cpclib-basmdoc = { workspace = true}
cpclib-asm.workspace = true
cpclib-crunch.workspace = true
cpclib-sna = { workspace = true, features = ["cmdline"] }
cpclib-disc = { workspace = true, features = ["cmdline"] }
cpclib-cpr.workspace = true
cpclib-cprcli.workspace = true
fs-err.workspace = true
cpclib-imgconverter = { workspace = true, features = ["xferlib"] }
cpclib-xfertool.workspace = true
cpclib-cslcli.workspace = true
hxcfe_cli.workspace = true

anstyle = "1.0.14"
anyhow = "1.0.102"
camino = { workspace = true, features = ["serde1"] }
camino-tempfile.workspace = true
clap = { workspace = true, features = ["derive"] }
codespan-reporting.workspace = true
delegate.workspace = true
dot-writer = "0.1.4"
dircpy.workspace = true
either.workspace = true
fancy-duration = "0.9.2"
flate2 = "1.1"
tar = "0.4"
zip = "8.6"
globmatch = "0.3"
hostname = "0.4.2"
lazy-regex = "3.6.0"
memchr.workspace = true
minijinja = { workspace = true, features = ["loader", "debug"] }
paste.workspace = true
rtzx.workspace = true
self_cell = "1.2.2"
self_update = {workspace = true, optional = true}
serde_yaml = "0.9.34"
serde.workspace = true
shlex.workspace = true
thiserror = "2.0"
topologic = "1.1.0"
clap_complete = "4.6.5"
query-shell = "0.3.0"
utf8-chars = "3.0.7"
fancy-regex = "0.18.0"

[build-dependencies]
built.workspace = true
build-deps = "0.1.4"


[dev-dependencies]
test-generator = "0.3.1"
serial_test = "3.4.0"
camino-tempfile = { workspace = true }
assert_cmd = "2.2.2"
predicates = "3.1"

[[bin]]
name = "bndbuild"
path = "src/main.rs"

[features]

default = ["sna-interactive","colored_errors", "self-update", "fap", "rayon", "hfe", "screenshot",
"apultra", "bzpack", "exomizer", "lz4", "lz48", "lz49", "lzsa", "pucrunch", "shrinkler", "zx7", "upkr", "zx0"]
colored_errors = ["cpclib-basm/colored_errors"]
fap = ["cpclib-runner/fap"]
screenshot = ["cpclib-runner/screenshot"]
hfe = ["cpclib-asm/hfe", "cpclib-disc/hfe", "cpclib-basm/hfe", "cpclib-bdasm/hfe", "cpclib-runner/hfe"]
indicatif = ["cpclib-basm/indicatif"]
rayon = ["cpclib-basm/rayon", "cpclib-common/rayon", "cpclib-asm/rayon", "cpclib-imgconverter/rayon"]
sna-interactive = ["cpclib-sna/interactive"]
self-update =["self_update"]


apultra = ["cpclib-crunch/apultra", "cpclib-asm/apultra", "cpclib-basm/apultra"]
bzpack = ["cpclib-crunch/bzpack", "cpclib-asm/bzpack", "cpclib-basm/bzpack"]
exomizer = ["cpclib-crunch/exomizer", "cpclib-asm/exomizer", "cpclib-basm/exomizer"]
lz4 = ["cpclib-crunch/lz4", "cpclib-asm/lz4", "cpclib-basm/lz4"]
lz48 = ["cpclib-crunch/lz48", "cpclib-asm/lz48", "cpclib-basm/lz48"]
lz49 = ["cpclib-crunch/lz49", "cpclib-asm/lz49", "cpclib-basm/lz49"]
lzsa = ["cpclib-crunch/lzsa", "cpclib-asm/lzsa", "cpclib-basm/lzsa"]
pucrunch = ["cpclib-crunch/pucrunch", "cpclib-asm/pucrunch", "cpclib-basm/pucrunch"]
shrinkler = ["cpclib-crunch/shrinkler", "cpclib-asm/shrinkler", "cpclib-basm/shrinkler"]
zx7 = ["cpclib-crunch/zx7", "cpclib-asm/zx7", "cpclib-basm/zx7"]
upkr = ["cpclib-crunch/upkr", "cpclib-asm/upkr", "cpclib-basm/upkr"]
zx0 = ["cpclib-crunch/zx0", "cpclib-asm/zx0", "cpclib-basm/zx0"]

[profile.release]
debug = 1
