[package]

name = "cpclib-catart"
version.workspace = true
description = "Catart-related functionality for Amstrad CPC demos"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[package.metadata.workspaces]
independent = true

[dependencies]
cpclib-basic.workspace = true
cpclib-common.workspace = true
cpclib-image.workspace = true

bon.workspace = true
paste.workspace = true
delegate.workspace = true
owo-colors.workspace = true

[dev-dependencies]
image.workspace = true

[build-dependencies]
built.workspace = true
