[package]
name = "cpclib-common"
version = "0.6.1-alpha.2"
description = "common libraries used in cpclib"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[package.metadata.workspaces]
independent = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitfield = "0.13.2"
bitflags = "1.3.2"
bitsets = "0.1.1"
bitvec = "1.0.0"

itertools= "0.10.3"
lazy_static = "1.4.0"
nom = "7.1.1"
nom_locate = "4.0.0"
num= "0.4.0"
num-bigint = "0.4.3"
resolve-path = "0.1.0"
smallvec = "1.8.0"
smol_str = "0.1.23"
strsim = "0.10.0"


time = { version = "0.3.9", optional = true }
semver = { version = "1.0.9", optional = true }
clap = { version = "4.1.11", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1.5.3"


[features]
cmdline = ["time", "semver", "clap"]
