[package]
name = "cpclib-common"
version.workspace = true
description = "common libraries used in cpclib"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[package.metadata.workspaces]
independent = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitfield.workspace = true
bitflags.workspace = true
bitvec.workspace = true

camino.workspace = true
itertools.workspace = true
winnow = {workspace = true, features=["simd"]}
num.workspace = true
num-bigint.workspace = true
resolve-path.workspace = true
smallvec.workspace = true
smol_str.workspace = true
strsim.workspace = true


time = { workspace = true, optional = true }
semver = { workspace = true, optional = true }
clap = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = {workspace = true, optional = true }


[features]
cmdline = ["time", "semver", "clap"]
rayon = ["dep:rayon"]
