[package]
name = "cpclib-cpr"
version.workspace = true
description = "cpclib libraries related to CPR handling"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]

cpclib-common.workspace = true
fs-err.workspace = true
