[package]
name = "cpclib-cprcli"
version = "0.3.1"
description = "Command line tool to manipulate CPRg"


authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
colored = "2.1.0"

cpclib-common ={ workspace=true, features=["cmdline"] }
cpclib-cpr.workspace = true
