[package]
name = "cpclib-cprcli"
version = "0.7.0"
description = "Command line tool to manipulate CPRg"


authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
colored = "2.2.0"

cpclib-common ={ workspace=true, features=["cmdline"] }
cpclib-cpr.workspace = true
