cargo-features = ["edition2024"]
[package]
name = "cpclib-cprcli"
version.workspace = true
description = "Command line tool to manipulate CPRg"


authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
colored = "3.0.0"

cpclib-common ={ workspace=true, features=["cmdline"] }
cpclib-cpr.workspace = true
