[package]
name = "cpclib-crunch"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description= "Cruncher for Amstrad CPC projects."


[dependencies]
cpclib-common = {workspace = true, features = ["cmdline"]}
cpclib-asm = {workspace = true} # just to load data :( shouldbe replaced by cpclib-disc
cpclib-crunchers = {workspace = true}
cpclib-disc = {workspace = true}

[lints]
workspace = true
