[package]
name = "cpclib-crunch"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description= "Cruncher for Amstrad CPC projects."


[dependencies]
cpclib-common = {workspace = true, features = ["cmdline"]}
cpclib-crunchers = {workspace = true}
cpclib-files = {workspace = true}
cpclib-disc = {workspace = true}
cpclib-asm = {workspace = true}

[build-dependencies]
built = { version = "0.7.5", features = ["chrono"] }

[lints]
workspace = true
