[package]
name = "cpclib-crunch"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description= "Cruncher for Amstrad CPC projects."


[dependencies]
cpclib-common = {workspace = true, features = ["cmdline"]}
cpclib-crunchers = {workspace = true}
cpclib-files = {workspace = true}
cpclib-disc = {workspace = true}
cpclib-asm = {workspace = true}

[build-dependencies]
built = { version = "0.8.0", features = ["chrono"] }

[lints]
workspace = true


[features]
all = ["apultra", "exomizer", "lz4", "lz48", "lz49", "lzsa", "pucrunch", "shrinkler", "upkr", "zx0"]
apultra = ["cpclib-crunchers/apultra"]
exomizer = ["cpclib-crunchers/exomizer"]
lz4 = ["cpclib-crunchers/lz4"]
lz48 = ["cpclib-crunchers/lz48"]
lz49 = ["cpclib-crunchers/lz49"]
lzsa = ["cpclib-crunchers/lzsa"]
pucrunch = ["cpclib-crunchers/pucrunch"]
shrinkler = ["cpclib-crunchers/shrinkler"]
zx7 = ["cpclib-crunchers/zx7"]
upkr = ["cpclib-crunchers/upkr"]
zx0 = ["cpclib-crunchers/zx0"]