[package]

name = "cpclib-crunchers"
version = "0.8.0"
description = "crunchers that are used in cpc world"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[package.metadata.workspaces]
independent = true

[dependencies]
cxx = "1.0"
libc.workspace = true

[build-dependencies]
built.workspace = true
cc.workspace = true
cxx-build = "1.0"



#[lib]
#crate-type = ["cdylib", "dylib"]
