[package]

name = "cpclib-crunchers"
version.workspace = true
description = "crunchers that are used in cpc world"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[package.metadata.workspaces]
independent = true

[dependencies]
libc.workspace = true
upkr = {"version" = "0.2.3", "optional" = true}
zx0 = {"version" = "1.0.0", "optional" = true}

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
cxx = "1.0"


[build-dependencies]
built.workspace = true
cc.workspace = true
cxx-build = "1.0"


[features]
default = ["apultra", "exomizer", "lz4", "lz48", "lz49", "lzsa", "pucrunch", "shinkler", "upkr", "zx0"]
apultra = []
exomizer = []
lz4 = []
lz48 = []
lz49 = []
lzsa = []
pucrunch = []
shinkler = []
zx7 = []
upkr = ["dep:upkr"]
zx0 = ["dep:zx0"]



#[lib]
#crate-type = ["cdylib", "dylib"]
