[package]
name = "cpclib-cslcli"
version.workspace = true
description = "Command line tool to parse and validate CSL files"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
cpclib-common = { workspace = true, features = ["cmdline"] }
cpclib-csl.workspace = true
