[package]
name = "cpclib-cslcli"
version.workspace = true
description = "Command line tool to parse and validate CSL files"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
cpclib-common = { workspace = true, features = ["cmdline"] }
cpclib-csl.workspace = true
fs-err.workspace = true

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*