[package]

name = "cpclib-disc"
version = "0.9.0"
description = "cpclib libraries related to snapshots"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[package.metadata.workspaces]
independent = true

[dependencies]
cpclib-tokens.workspace = true
cpclib-common.workspace = true


arrayref.workspace = true
cfg-if.workspace = true
custom_error.workspace = true
delegate.workspace = true
either.workspace = true
getset.workspace = true
#memchr.workspace = true
serde.workspace = true
thiserror.workspace = true

log = {workspace = true, optional = true }
simple_logger = { workspace = true, optional = true}
enumn = {workspace = true, optional = true}
camino-tempfile = {workspace = true, optional = true}


# Only allow it on linux, because it fails on other platforms right now
hxcfe = {workspace = true, optional = true}

[dev-dependencies]
camino-tempfile.workspace = true


[build-dependencies]
built.workspace = true


[features]
default = ["dskmanager", "catalog", "hideur"]
dskmanager = ["cmdline"]
catalog = ["cmdline", "log", "simple_logger"]
hideur = ["cmdline"]
hfe = ["hxcfe", "enumn", "camino-tempfile"]
cmdline = ["cpclib-common/cmdline"]

[[bin]]
name = "dskmanager"
path = "src/bin/dsk_manager.rs"
required-features = ["dskmanager"]

[[bin]]
name = "hideur"
path = "src/bin/hideur.rs"
required-features = ["hideur"]


[[bin]]
name = "catalog"
path = "src/bin/catalog.rs"
required-features = ["catalog"]
