[package]
name = "cpclib-emucontrol"
version = "0.7.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
cpclib-runner.workspace = true
cpclib-common.workspace = true
clap = {workspace=true, features=["derive"]}
glob.workspace = true



[dev-dependencies]
assert_cmd = "2.0.16"
serial_test = "3.2.0"
ntest = "0.9.3"

[[bin]]
name = "emucontrol"
path = "src/main.rs"
