
[package]
name = "cpclib-files"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true

[dependencies]
cpclib-disc.workspace = true
cpclib-common.workspace = true
delegate.workspace = true
either.workspace = true


[lints]
workspace = true
