[package]
name = "cpclib-image"
version = "0.7.1"
description = "Image manipulation library for amstrad cpc"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[package.metadata.workspaces]
independent = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpclib-common.workspace = true

image.workspace = true
anyhow.workspace = true
gif.workspace = true
gif-dispose.workspace = true
as-slice.workspace = true
contracts.workspace = true
serde.workspace = true
arrays = "0.2.0"
