[package]
name = "cpclib-image"
version.workspace = true
description = "Image manipulation library for amstrad cpc"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[package.metadata.workspaces]
independent = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpclib-common.workspace = true

anyhow.workspace = true
as-slice.workspace = true
fs-err.workspace = true
gif-dispose.workspace = true
gif.workspace = true
image.workspace = true
nutype = {workspace = true, features = ["serde", "new_unchecked"]}
serde.workspace = true
#arrays = "0.2.0"

rayon = { version = "1.11", optional = true }

[features]
default = []
rayon = ["dep:rayon"]
