[package]
name = "cpclib-imgconverter"
version = "0.6.1-alpha.2"
description = "Image manipulation tool for amstrad CPC"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[package.metadata.workspaces]
independent = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpclib = { version = "0.6.1-alpha.2", features = ["cmdline"] }

lz4.workspace = true
notify.workspace = true
crossbeam-channel.workspace = true
exitcode.workspace = true
tempfile.workspace = true
anyhow.workspace = true

[build-dependencies]
built.workspace = true


[features]
default = ["xferlib"]
xferlib = ["cpclib/xferlib"]


[[bin]]
name = "imgconverter"
path = "src/main.rs"
