[package]
name = "cpclib-imgconverter"
version = "0.7.0"
description = "Image manipulation tool for amstrad CPC"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[package.metadata.workspaces]
independent = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpclib = { workspace=true, features = ["cmdline"] }


anyhow.workspace = true
notify.workspace = true
crossbeam-channel.workspace = true
exitcode.workspace = true
tempfile.workspace = true


[build-dependencies]
built.workspace = true

[features]
default = ["xferlib"]
xferlib = ["cpclib/xferlib"]
