[package]
name = "cpclib-imgconverter"
version = "0.9.0"
description = "Image manipulation tool for amstrad CPC"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[package.metadata.workspaces]
independent = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpclib = { workspace=true, features = ["cmdline"] }


anyhow.workspace = true
crossbeam-channel.workspace = true
exitcode.workspace = true
camino-tempfile.workspace = true

notify = {workspace = true, optional = true}

[build-dependencies]
built.workspace = true

[features]
default = ["xferlib", "watch"]
xferlib = ["cpclib/xferlib"]
watch = ["notify", "xferlib"]
