[package]
name = "cpclib-macros"
version = "0.6.1-alpha.2"
description = "cpclib macros related to z80 assembling"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[package.metadata.workspaces]
independent = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpclib-asm = "0.6.1-alpha.2"
cpclib-common = "0.6.1-alpha.2"

syn = "1.0.95"
quote = "1.0.18"
proc-macro2 = "1.0.39"

[lib]
proc-macro = true
