[package]
name = "cpclib-macros"
version = "0.6.1-alpha.2"
description = "cpclib macros related to z80 assembling"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[package.metadata.workspaces]
independent = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpclib-asm = {version="0.6.1-alpha.2", default-features=false}
cpclib-common = {version="0.6.1-alpha.2", default-features=false}

syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true

[lib]
proc-macro = true
