cargo-features = ["edition2024"]
[package]
name = "cpclib-macros"
version.workspace = true
description = "cpclib macros related to z80 assembling"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[package.metadata.workspaces]
independent = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpclib-asm.workspace = true
cpclib-common.workspace = true

syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true

[lib]
proc-macro = true
