[package]
name = "cpclib-python"
version.workspace = true
edition.workspace = true
description = "Python wrappers for cpclib components using pyo3"
license.workspace = true

[lib]
name = "cpclib_python"
crate-type = ["cdylib", "rlib"]
test = false

[features]
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]

[dependencies]
pyo3 = { version = "0.28.3", features = ["extension-module"] }
bon.workspace = true
cpclib-asm = { path = "../cpclib-asm", default-features = false }
cpclib-basic = { path = "../cpclib-basic", default-features = false }
cpclib-basm = { path = "../cpclib-basm", default-features = false }
cpclib-bdasm = { path = "../cpclib-bdasm", default-features = false }
cpclib-bndbuild = { path = "../cpclib-bndbuild", default-features = false }
cpclib-cpr = { path = "../cpclib-cpr", default-features = false }
cpclib-crunchers = { path = "../cpclib-crunchers", default-features = false }
cpclib-common = { path = "../cpclib-common", default-features = false }
cpclib-sna = { path = "../cpclib-sna", default-features = false, features = ["cmdline", "interactive"] }

[package.metadata]
# Notes: This crate provides Python bindings; extend with real wrappers as needed.

[package.metadata.maturin]
features = ["extension-module"]

[build-dependencies]
pyo3-build-config = "0.28.3"
